vendor/libusbK/include/libusbk.h

#define KUSB_API WINAPI
typedef union _KUSB_SETUP_PACKET
{
	UCHAR	Bytes[8];
	USHORT	Words[4];
	struct
	{
		struct
		{
			UCHAR Recipient: 2;
			UCHAR Reserved: 3;
			UCHAR Type: 2;
			UCHAR Dir: 1;
		} BmRequest;
		UCHAR Request;
		USHORT Value;
		USHORT Index;
		USHORT Length;
	};
	struct
	{
		struct
		{
			UCHAR b0: 1;
			UCHAR b1: 1;
			UCHAR b2: 1;
			UCHAR b3: 1;
			UCHAR b4: 1;
			UCHAR b5: 1;
			UCHAR b6: 1;
			UCHAR b7: 1;
		} BmRequestBits;
		struct
		{
			UCHAR b0: 1;
			UCHAR b1: 1;
			UCHAR b2: 1;
			UCHAR b3: 1;
			UCHAR b4: 1;
			UCHAR b5: 1;
			UCHAR b6: 1;
			UCHAR b7: 1;
		} RequestBits;
		UCHAR ValueLo;
		UCHAR ValueHi;
		UCHAR IndexLo;
		UCHAR IndexHi;
		UCHAR LengthLo;
		UCHAR LengthHi;
	};
} KUSB_SETUP_PACKET;
typedef void* KLIB_HANDLE;
typedef KLIB_HANDLE KUSB_HANDLE;
typedef KLIB_HANDLE KLST_HANDLE;
#define KLST_STRING_MAX_LEN 256
typedef enum _KLST_SYNC_FLAG
{
    KLST_SYNC_FLAG_NONE				= 0L,
    KLST_SYNC_FLAG_UNCHANGED		= 0x0001,
    KLST_SYNC_FLAG_ADDED			= 0x0002,
    KLST_SYNC_FLAG_REMOVED			= 0x0004,
    KLST_SYNC_FLAG_CONNECT_CHANGE	= 0x0008,
    KLST_SYNC_FLAG_MASK				= 0x000F,
} KLST_SYNC_FLAG;
typedef struct _KLST_DEV_COMMON_INFO
{
	INT Vid;
	INT Pid;
	INT MI;
	CHAR InstanceID[KLST_STRING_MAX_LEN];
} KLST_DEV_COMMON_INFO;
typedef struct _KLST_DEVINFO
{
	KLST_DEV_COMMON_INFO Common;
	INT DriverID;
	CHAR DeviceInterfaceGUID[KLST_STRING_MAX_LEN];
	CHAR DeviceID[KLST_STRING_MAX_LEN];
	CHAR ClassGUID[KLST_STRING_MAX_LEN];
	CHAR Mfg[KLST_STRING_MAX_LEN];
	CHAR DeviceDesc[KLST_STRING_MAX_LEN];
	CHAR Service[KLST_STRING_MAX_LEN];
	CHAR SymbolicLink[KLST_STRING_MAX_LEN];
	CHAR DevicePath[KLST_STRING_MAX_LEN];
	INT LUsb0FilterIndex;
	BOOL Connected;
	KLST_SYNC_FLAG SyncFlags;
	INT BusNumber;
	INT DeviceAddress;
	CHAR SerialNumber[KLST_STRING_MAX_LEN];
} KLST_DEVINFO;
typedef KLST_DEVINFO* KLST_DEVINFO_HANDLE;
typedef enum _KLST_FLAG
{
    KLST_FLAG_NONE = 0L,
    KLST_FLAG_INCLUDE_RAWGUID = 0x0001,
    KLST_FLAG_INCLUDE_DISCONNECT = 0x0002,
} KLST_FLAG;
	KUSB_EXP BOOL KUSB_API LibK_Context_Init(
	    _inopt HANDLE Heap,
	    _in PVOID Reserved);
	KUSB_EXP VOID KUSB_API LibK_Context_Free(VOID);
	KUSB_EXP BOOL KUSB_API UsbK_Init (
	    _out KUSB_HANDLE* InterfaceHandle,
	    _in KLST_DEVINFO_HANDLE DevInfo);
	KUSB_EXP BOOL KUSB_API UsbK_Free (
	    _in KUSB_HANDLE InterfaceHandle);
	KUSB_EXP BOOL KUSB_API UsbK_ClaimInterface (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR NumberOrIndex,
	    _in BOOL IsIndex);
	KUSB_EXP BOOL KUSB_API UsbK_ReleaseInterface (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR NumberOrIndex,
	    _in BOOL IsIndex);
	KUSB_EXP BOOL KUSB_API UsbK_GetDescriptor (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR DescriptorType,
	    _in UCHAR Index,
	    _in USHORT LanguageID,
	    _out PUCHAR Buffer,
	    _in UINT BufferLength,
	    _outopt PUINT LengthTransferred);
	KUSB_EXP BOOL KUSB_API UsbK_ControlTransfer (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in WINUSB_SETUP_PACKET SetupPacket,
	    _refopt PUCHAR Buffer,
	    _in UINT BufferLength,
	    _outopt PUINT LengthTransferred,
	    _inopt LPOVERLAPPED Overlapped);
	KUSB_EXP BOOL KUSB_API UsbK_SetConfiguration (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR ConfigurationNumber);
	KUSB_EXP BOOL KUSB_API UsbK_GetConfiguration (
	    _in KUSB_HANDLE InterfaceHandle,
	    _out PUCHAR ConfigurationNumber);
	KUSB_EXP BOOL KUSB_API UsbK_SetPipePolicy (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR PipeID,
	    _in UINT PolicyType,
	    _in UINT ValueLength,
	    _in PVOID Value);
	KUSB_EXP BOOL KUSB_API UsbK_ReadPipe (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR PipeID,
	    _out PUCHAR Buffer,
	    _in UINT BufferLength,
	    _outopt PUINT LengthTransferred,
	    _inopt LPOVERLAPPED Overlapped);
	KUSB_EXP BOOL KUSB_API UsbK_WritePipe (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR PipeID,
	    _in PUCHAR Buffer,
	    _in UINT BufferLength,
	    _outopt PUINT LengthTransferred,
	    _inopt LPOVERLAPPED Overlapped);
	KUSB_EXP BOOL KUSB_API UsbK_ResetPipe (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR PipeID);
	KUSB_EXP BOOL KUSB_API UsbK_AbortPipe (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR PipeID);
	KUSB_EXP BOOL KUSB_API UsbK_FlushPipe (
	    _in KUSB_HANDLE InterfaceHandle,
	    _in UCHAR PipeID);
	KUSB_EXP BOOL KUSB_API LstK_Init(
	    _out KLST_HANDLE* DeviceList,
	    _in KLST_FLAG Flags);
	KUSB_EXP BOOL KUSB_API LstK_Free(
	    _in KLST_HANDLE DeviceList);
	KUSB_EXP BOOL KUSB_API LstK_Current(
	    _in KLST_HANDLE DeviceList,
	    _out KLST_DEVINFO_HANDLE* DeviceInfo);
	KUSB_EXP BOOL KUSB_API LstK_MoveNext(
	    _in KLST_HANDLE DeviceList,
	    _outopt KLST_DEVINFO_HANDLE* DeviceInfo);
	KUSB_EXP VOID KUSB_API LstK_MoveReset(
	    _in KLST_HANDLE DeviceList);
	KUSB_EXP BOOL KUSB_API LstK_Count(
	    _in KLST_HANDLE DeviceList,
	    _ref PUINT Count);